# vibecamp-expansion

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  eval_bot.py  pyproject.toml  render.yaml
deploy/: com.vibecamp.crawler.plist
docs/: BOT_PUBLICITY.md  NEW_EVENT_BOT_PLAYBOOK.md  PERSONALITY_PA_KICKOFF.md
tests/: test_analytics.py  test_api.py  test_bot_filtering.py  test_bot_llm_cost.py  test_export.py  test_normalize.py  test_ratelimit.py  test_store.py  test_userstore.py
vibecamp_expansion/: __init__.py  analytics.py  api.py  asgi.py  bot_api.py  bot_llm.py  calendar_view.py  cli.py  config.py  crawler.py  discord_bot.py  export.py  landing.py  mcp_server.py  models.py  normalize.py  ratelimit.py  store.py  telegram_bot.py  userstore.py
