[project]
name = "vibecamp-expansion"
version = "0.1.0"
description = "Agent-friendly REST API + MCP server over the Vibe Camp event schedule."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
discord = [
    "discord.py>=2.3",
    "anthropic>=0.49",
]
telegram = [
    "python-telegram-bot>=21.0",
    "anthropic>=0.49",
]

[project.scripts]
vibecamp = "vibecamp_expansion.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vibecamp_expansion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
